--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My first github project</h1>
+    <h2>Using Netlify</h2>
     <script src="index.js"></script>
 </body>
 </html>
